--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-  <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark p-2">
+  <nav class="navbar sticky-top navbar-expand-lg navbar-dark p-2">
     <a class="navbar-brand" href="#">TH</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -27,7 +27,7 @@
     </div>
   </nav>
 
-  <div class="hero">
+  <div class="hero container">
     <div class="upper">
       <h2>Hey, I'm</h2>
     </div>
@@ -43,6 +43,8 @@
       <img class="headshot" src="./assets/images/taycutout.png" alt="Taylor shown standing and laughing">
     </div>
   </div>
+
+  
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
