--- a/index.html
+++ b/index.html
@@ -4,50 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Document</title>
 </head>
 <body>
-  <nav class="navbar sticky-top navbar-expand-lg navbar-dark p-2">
-    <a class="navbar-brand" href="#">TH</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-      </ul>
+  <nav>
+    <div class="logo">
+      <h1>TH</h1>
+    </div>
+    <div class="hamburger">
+      <div class="burger"></div>
+      <div class="burger"></div>
+      <div class="burger"></div>
     </div>
   </nav>
 
-  <div class="hero container">
-    <div class="upper">
-      <h2>Hey, I'm</h2>
-    </div>
-    <div class="mid">
-      <h1>Taylor Hakes</h1>
-    </div>
-    <div class="lower">
-      <div class="l1"><h3>DEVELOPER</h3></div>
-      <div class="l2"><h3>CREATIVE</h3></div>
-      <div class="l3"><h3>and FRIEND</h3></div>
-    </div>
-    <div class="image">
-      <img class="headshot" src="./assets/images/taycutout.png" alt="Taylor shown standing and laughing">
-    </div>
-  </div>
+  <section class="jumbotron">
+    <h1 class="intro-text">Hey! I'm Taylor. I build interactive websites for humans.</h1>
+  </section>
 
-  
+  <section class="project-section">
+    <div class="project-block">
+      <h2 class="project-title">My Portfolio Website</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ullam voluptatum, facere explicabo iure dolori.</p>
+      <a href="#">Visit Website</a>
+    </div>
+    <div class="project-block">
+      <h2 class="project-title">Git N Shape</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ullam voluptatum, facere explicabo iure dolori.</p>
+      <a href="#">Visit Website</a>
+    </div>
+    <div class="project-block"></div>
+    <div class="project-block"></div>
+  </section>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
