--- a/index.html
+++ b/index.html
@@ -19,24 +19,54 @@
     </div>
   </nav>
 
-  <section class="jumbotron">
-    <h1 class="intro-text">Hey! I'm Taylor. I build interactive websites for humans.</h1>
-  </section>
+  <main>
+    <section class="jumbotron">
+      <h1 class="intro-text">Hey! I'm Taylor. I build interactive websites for humans.</h1>
+      <img src="/assets/images/icosahedron-muted-350.png" alt="icosahedron-muted-350">
+    </section>
+  
+    <section class="project-section">
+      <h1 class="section-title">Projects</h1>
+      <div class="project-block">
+        <h2 class="project-title">My Portfolio Website</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ullam voluptatum, facere explicabo iure dolori.</p>
+        <a href="#">Visit Website</a>
+      </div>
+      <div class="project-block">
+        <h2 class="project-title">Git N Shape</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ullam voluptatum, facere explicabo iure dolori.</p>
+        <a href="#">Visit Website</a>
+      </div>
+      <div class="project-block">
+        <h2 class="project-title">Git N Shape</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ullam voluptatum, facere explicabo iure dolori.</p>
+        <a href="#">Visit Website</a>
+      </div>
+      <div class="project-block">
+        <h2 class="project-title">Git N Shape</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ullam voluptatum, facere explicabo iure dolori.</p>
+        <a href="#">Visit Website</a>
+      </div>
+    </section>
 
-  <section class="project-section">
-    <div class="project-block">
-      <h2 class="project-title">My Portfolio Website</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ullam voluptatum, facere explicabo iure dolori.</p>
-      <a href="#">Visit Website</a>
-    </div>
-    <div class="project-block">
-      <h2 class="project-title">Git N Shape</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ullam voluptatum, facere explicabo iure dolori.</p>
-      <a href="#">Visit Website</a>
-    </div>
-    <div class="project-block"></div>
-    <div class="project-block"></div>
-  </section>
+    <section class="about-section">
+      <h1 class="section-title">About</h1>
+      <div class="about-text">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam, aperiam, dolor magnam perferendis reprehenderit, cupiditate excepturi soluta tempore culpa praesentium molestias? Consectetur saepe ullam expedita itaque sapiente, magni dolorem rem?
+      </div>
+      <div class="about-text">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam, aperiam, dolor magnam perferendis reprehenderit, cupiditate excepturi soluta tempore culpa praesentium molestias? Consectetur saepe ullam expedita itaque sapiente, magni dolorem rem?
+      </div>
+    </section>
+
+    <section class="contact-section">
+      <h1 class="section-title">Reach Me</h1>
+      <h2>Phone</h2>
+      <h2>Email</h2>
+      <h2>Socials</h2>
+      <h2>Resumé</h2>
+    </section>
+  </mai>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 </body>
