palette adjust, projects expansion

--- a/index.html
+++ b/index.html
@@ -30,22 +30,37 @@
       <div class="project-block">
         <h2 class="project-title">My Portfolio Website</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ullam voluptatum, facere explicabo iure dolori.</p>
-        <a href="#">Visit Website</a>
+          <a href="#">Case Study</a> // <a href="#">GitHub Repo</a>
       </div>
       <div class="project-block">
         <h2 class="project-title">Git N Shape</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ullam voluptatum, facere explicabo iure dolori.</p>
-        <a href="#">Visit Website</a>
+        <a href="#">Visit Website</a> // <a href="#">GitHub Repo</a>
       </div>
       <div class="project-block">
         <h2 class="project-title">Git N Shape</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ullam voluptatum, facere explicabo iure dolori.</p>
-        <a href="#">Visit Website</a>
+        <a href="#">Visit Website</a> // <a href="#">GitHub Repo</a>
       </div>
       <div class="project-block">
         <h2 class="project-title">Git N Shape</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ullam voluptatum, facere explicabo iure dolori.</p>
-        <a href="#">Visit Website</a>
+        <a href="#">Visit Website</a> // <a href="#">GitHub Repo</a>
+      </div>
+      <div class="project-block">
+        <h2 class="project-title">Git N Shape</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ullam voluptatum, facere explicabo iure dolori.</p>
+        <a href="#">Visit Website</a> // <a href="#">GitHub Repo</a>
+      </div>
+      <div class="project-block">
+        <h2 class="project-title">Git N Shape</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ullam voluptatum, facere explicabo iure dolori.</p>
+        <a href="#">Visit Website</a> // <a href="#">GitHub Repo</a>
+      </div>
+      <div class="project-block">
+        <h2 class="project-title">Git N Shape</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ullam voluptatum, facere explicabo iure dolori.</p>
+        <a href="#">Visit Website</a> // <a href="#">GitHub Repo</a>
       </div>
     </section>
 
@@ -53,6 +68,9 @@
       <h1 class="section-title">About</h1>
       <div class="about-text">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam, aperiam, dolor magnam perferendis reprehenderit, cupiditate excepturi soluta tempore culpa praesentium molestias? Consectetur saepe ullam expedita itaque sapiente, magni dolorem rem?
+      </div>
+      <div class="about-text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, modi excepturi? Hic, a nemo? Deserunt natus ullam optio atque provident consectetur fuga hic tenetur impedit quis molestiae, soluta itaque? Minima.
       </div>
       <div class="about-text">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam, aperiam, dolor magnam perferendis reprehenderit, cupiditate excepturi soluta tempore culpa praesentium molestias? Consectetur saepe ullam expedita itaque sapiente, magni dolorem rem?
