--- a/index.html
+++ b/index.html
@@ -26,42 +26,79 @@
     </section>
   
     <section class="project-section">
+
       <h1 class="section-title">Projects</h1>
-      <div class="project-block">
-        <h2 class="project-title">My Portfolio Website</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ullam voluptatum, facere explicabo iure dolori.</p>
+
+      <div class="project-card">
+        <div class="project-body">
+          <h2 class="project-title">My Portfolio Website</h2>
+          <p>This website was largely inspired by the portfolio design of Prashant.</p>
+        </div>
+        <div class="project-footer">
           <a href="#">Case Study</a> // <a href="#">GitHub Repo</a>
+        </div>
       </div>
-      <div class="project-block">
-        <h2 class="project-title">Git N Shape</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ullam voluptatum, facere explicabo iure dolori.</p>
-        <a href="#">Visit Website</a> // <a href="#">GitHub Repo</a>
+
+      <div class="project-card">
+        <div class="project-body">
+          <h2 class="project-title">Weather Dashboard</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis delectus eligendi quasi, amet ut totam in, quaerat modi ex deserunt assumenda voluptates quo quas debitis harum ipsam, repellendus odit doloribus?</p>
+        </div>
+        <div class="project-footer">
+          <a href="#">Visit Website</a> // <a href="#">GitHub Repo</a>
+        </div>
       </div>
-      <div class="project-block">
-        <h2 class="project-title">Git N Shape</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ullam voluptatum, facere explicabo iure dolori.</p>
-        <a href="#">Visit Website</a> // <a href="#">GitHub Repo</a>
+
+      <div class="project-card">
+        <div class="project-body">
+          <h2 class="project-title">Work Day Scheduler</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis delectus eligendi quasi, amet ut totam in, quaerat modi ex deserunt assumenda voluptates quo quas debitis harum ipsam, repellendus odit doloribus?</p>
+        </div>
+        <div class="project-footer">
+          <a href="#">Visit Website</a> // <a href="#">GitHub Repo</a>
+        </div>
       </div>
-      <div class="project-block">
-        <h2 class="project-title">Git N Shape</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ullam voluptatum, facere explicabo iure dolori.</p>
-        <a href="#">Visit Website</a> // <a href="#">GitHub Repo</a>
+
+      <div class="project-card">
+        <div class="project-body">
+          <h2 class="project-title">Note Taker</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis delectus eligendi quasi, amet ut totam in, quaerat modi ex deserunt assumenda voluptates quo quas debitis harum ipsam, repellendus odit doloribus?</p>
+        </div>
+        <div class="project-footer">
+          <a href="#">Visit Website</a> // <a href="#">GitHub Repo</a>
+        </div>
       </div>
-      <div class="project-block">
-        <h2 class="project-title">Git N Shape</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ullam voluptatum, facere explicabo iure dolori.</p>
-        <a href="#">Visit Website</a> // <a href="#">GitHub Repo</a>
+
+      <div class="project-card">
+        <div class="project-body">
+          <h2 class="project-title">README Generator</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis delectus eligendi quasi, amet ut totam in, quaerat modi ex deserunt assumenda voluptates quo quas debitis harum ipsam, repellendus odit doloribus?</p>
+        </div>
+        <div class="project-footer">
+          <a href="#">Visit Website</a> // <a href="#">GitHub Repo</a>
+        </div>
       </div>
-      <div class="project-block">
-        <h2 class="project-title">Git N Shape</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ullam voluptatum, facere explicabo iure dolori.</p>
-        <a href="#">Visit Website</a> // <a href="#">GitHub Repo</a>
+
+      <div class="project-card">
+        <div class="project-body">
+          <h2 class="project-title">Team Profile Generator</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis delectus eligendi quasi, amet ut totam in, quaerat modi ex deserunt assumenda voluptates quo quas debitis harum ipsam, repellendus odit doloribus?</p>
+        </div>
+        <div class="project-footer">
+          <a href="#">Visit Website</a> // <a href="#">GitHub Repo</a>
+        </div>
       </div>
-      <div class="project-block">
-        <h2 class="project-title">Git N Shape</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ullam voluptatum, facere explicabo iure dolori.</p>
-        <a href="#">Visit Website</a> // <a href="#">GitHub Repo</a>
+
+      <div class="project-card">
+        <div class="project-body">
+          <h2 class="project-title">Code Quiz</Q></h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis delectus eligendi quasi, amet ut totam in, quaerat modi ex deserunt assumenda voluptates quo quas debitis harum ipsam, repellendus odit doloribus?</p>
+        </div>
+        <div class="project-footer">
+          <a href="#">Visit Website</a> // <a href="#">GitHub Repo</a>
+        </div>
       </div>
+
     </section>
 
     <section class="about-section">
