style up project cards

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="project-card">
         <div class="project-body">
           <h2 class="project-title">My Portfolio Website</h2>
-          <p>This website was largely inspired by the portfolio design of Prashant.</p>
+          <p>This website was largely inspired by the portfolio design of Prashant Sani.</p>
         </div>
         <div class="project-footer">
           <a href="#">Case Study</a> // <a href="#">GitHub Repo</a>
