playing with project card design

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <main>
     <section class="jumbotron">
       <h1 class="intro-text">Hey! I'm Taylor. I build interactive websites for humans.</h1>
-      <img src="/assets/images/icosahedron-muted-350.png" alt="icosahedron-muted-350">
+      <img id="icosa" src="/assets/images/icosahedron-muted-350.png" alt="icosahedron-muted-350">
     </section>
   
     <section class="project-section">
@@ -39,7 +39,7 @@
         </div>
       </div>
 
-      <div class="project-card">
+      <div id="weather-dash" class="project-card">
         <div class="project-body">
           <h2 class="project-title">Weather Dashboard</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis delectus eligendi quasi, amet ut totam in, quaerat modi ex deserunt assumenda voluptates quo quas debitis harum ipsam, repellendus odit doloribus?</p>
