enter project info and links

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <h1>TH</h1>
     </div>
     <div class="hamburger">
-      <div class="burger"></div>
-      <div class="burger"></div>
-      <div class="burger"></div>
+      <div class="patty"></div>
+      <div class="patty"></div>
+      <div class="patty"></div>
     </div>
   </nav>
 
@@ -35,67 +35,67 @@
           <p>This website was largely inspired by the portfolio design of Prashant Sani.</p>
         </div>
         <div class="project-footer">
-          <a href="#">Case Study</a> // <a href="#">GitHub Repo</a>
+          <a href="#">Case Study</a> // <a href="https://github.com/SadboiTay/portfolio2.0" target="_blank">GitHub Repo</a>
         </div>
       </div>
 
       <div id="weather-dash" class="project-card">
         <div class="project-body">
           <h2 class="project-title">Weather Dashboard</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis delectus eligendi quasi, amet ut totam in, quaerat modi ex deserunt assumenda voluptates quo quas debitis harum ipsam, repellendus odit doloribus?</p>
+          <p>A one-page site built with jQuery and Bootstrap that uses the OpenWeather API to retrieve forecast data in specific cities. Local storage saves a search history.</p>
         </div>
         <div class="project-footer">
-          <a href="#">Visit Website</a> // <a href="#">GitHub Repo</a>
-        </div>
-      </div>
-
-      <div class="project-card">
-        <div class="project-body">
-          <h2 class="project-title">Work Day Scheduler</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis delectus eligendi quasi, amet ut totam in, quaerat modi ex deserunt assumenda voluptates quo quas debitis harum ipsam, repellendus odit doloribus?</p>
-        </div>
-        <div class="project-footer">
-          <a href="#">Visit Website</a> // <a href="#">GitHub Repo</a>
-        </div>
-      </div>
-
-      <div class="project-card">
-        <div class="project-body">
-          <h2 class="project-title">Note Taker</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis delectus eligendi quasi, amet ut totam in, quaerat modi ex deserunt assumenda voluptates quo quas debitis harum ipsam, repellendus odit doloribus?</p>
-        </div>
-        <div class="project-footer">
-          <a href="#">Visit Website</a> // <a href="#">GitHub Repo</a>
-        </div>
-      </div>
-
-      <div class="project-card">
-        <div class="project-body">
-          <h2 class="project-title">README Generator</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis delectus eligendi quasi, amet ut totam in, quaerat modi ex deserunt assumenda voluptates quo quas debitis harum ipsam, repellendus odit doloribus?</p>
-        </div>
-        <div class="project-footer">
-          <a href="#">Visit Website</a> // <a href="#">GitHub Repo</a>
+          <a href="https://sadboitay.github.io/weather-dashboard/" target="_blank">Visit Website</a> // <a href="https://github.com/SadboiTay/weather-dashboard" target="_blank">GitHub Repo</a>
         </div>
       </div>
 
       <div class="project-card">
         <div class="project-body">
           <h2 class="project-title">Team Profile Generator</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis delectus eligendi quasi, amet ut totam in, quaerat modi ex deserunt assumenda voluptates quo quas debitis harum ipsam, repellendus odit doloribus?</p>
+          <p>Quickly generate a website displaying your team of employees through a command line app built with Node.js and inquirer npm. Created with a focus on object oriented programming and test driven development.</p>
         </div>
         <div class="project-footer">
-          <a href="#">Visit Website</a> // <a href="#">GitHub Repo</a>
+          <a href="#">Video Guide</a> // <a href="https://github.com/SadboiTay/team-profile-generator" target="_blank">GitHub Repo</a>
+        </div>
+      </div>
+
+      <div class="project-card">
+        <div class="project-body">
+          <h2 class="project-title">Work Day Scheduler</h2>
+          <p>A simple browser calendar application that allows a user to save events in local storage for each hour of the day.</p>
+        </div>
+        <div class="project-footer">
+          <a href="https://sadboitay.github.io/work-day-scheduler/" target="_blank">Visit Website</a> // <a href="https://github.com/SadboiTay/work-day-scheduler" target="_blank">GitHub Repo</a>
+        </div>
+      </div>
+
+      <div class="project-card">
+        <div class="project-body">
+          <h2 class="project-title">Note Taker</h2>
+          <p>Full stack application  that can be used to write and save notes via a deployed server. I used Express.js to build the server and connect it to the existing front-end.</p>
+        </div>
+        <div class="project-footer">
+          <a href="https://calm-badlands-94002.herokuapp.com/" target="_blank">Visit Website</a> // <a href="https://github.com/SadboiTay/note-taker" target="_blank">GitHub Repo</a>
+        </div>
+      </div>
+
+      <div class="project-card">
+        <div class="project-body">
+          <h2 class="project-title">README Generator</h2>
+          <p>A Node.js command line app that gathers prompted information from the user to dynamically generate a professional README document, letting developers focus more on their code.</p>
+        </div>
+        <div class="project-footer">
+          <a href="#">Video Guide</a> // <a href="https://github.com/SadboiTay/Professional-README-Generator" target="_blank">GitHub Repo</a>
         </div>
       </div>
 
       <div class="project-card">
         <div class="project-body">
           <h2 class="project-title">Code Quiz</Q></h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis delectus eligendi quasi, amet ut totam in, quaerat modi ex deserunt assumenda voluptates quo quas debitis harum ipsam, repellendus odit doloribus?</p>
+          <p>Test your knowledgee with a timed JavaScript quiz. Wrong answers dock your time and decrease your score.</p>
         </div>
         <div class="project-footer">
-          <a href="#">Visit Website</a> // <a href="#">GitHub Repo</a>
+          <a href="https://sadboitay.github.io/code-quiz/" target="_blank">Visit Website</a> // <a href="https://github.com/SadboiTay/code-quiz" target="_blank">GitHub Repo</a>
         </div>
       </div>
 
