spice up about section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="project-card">
         <div class="project-body">
           <h2 class="project-title">My Portfolio Website</h2>
-          <p>This website was largely inspired by the portfolio design of Prashant Sani.</p>
+          <p>A Responsive website that utilizes the power of Greensock (GSAP) & ScrollMagic powered animations, largely inspired by the beautiful <a id="prashant-link" href="https://prashantsani.com/" target="_blank">portfolio design</a> of Prashant Sani.</p>
         </div>
         <div class="project-footer">
           <a href="#">Case Study</a> // <a href="https://github.com/SadboiTay/portfolio2.0" target="_blank">GitHub Repo</a>
@@ -102,20 +102,35 @@
     </section>
 
     <section class="about-section">
-      <h1 class="section-title">About</h1>
-      <div class="about-text">
+      <div class="tay-container">
+        <div class="blanket">
+          <img id="tay-cutout" src="./assets/images/taycutout.png" alt="tay">
+          <div class="socials-box">
+            <h1 id="about-title" class="section-title">About</h1>
+            <img src="./assets/images/github.png" alt="github">
+            <img src="./assets/images/linkedin.png" alt="github">
+            <img src="./assets/images/spotify.png" alt="github">
+            <img src="./assets/images/email.png" alt="github">
+            <img src="./assets/images/phone-call.png" alt="github">
+          </div>
+        </div>
+      </div>
+      <div class="about-text1">
+        I'm a full stack web developer and recent graduate from the <span>Universty of Utah</span>'s coding bootcamp. My place in the world seems to be at the junction creativity and logic.
+      </div>
+      <div class="about-text2">
+        Whether it's breathing new life into legacy content, or starting with a blank slate and building applications from scratch, I tackle every project with eagerness and enthusiasm.
+      </div>
+      <div class="about-text3">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam, aperiam, dolor magnam perferendis reprehenderit, cupiditate excepturi soluta tempore culpa praesentium molestias? Consectetur saepe ullam expedita itaque sapiente, magni dolorem rem?
       </div>
-      <div class="about-text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, modi excepturi? Hic, a nemo? Deserunt natus ullam optio atque provident consectetur fuga hic tenetur impedit quis molestiae, soluta itaque? Minima.
-      </div>
-      <div class="about-text">
+      <div class="about-text4">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam, aperiam, dolor magnam perferendis reprehenderit, cupiditate excepturi soluta tempore culpa praesentium molestias? Consectetur saepe ullam expedita itaque sapiente, magni dolorem rem?
       </div>
     </section>
 
     <section class="contact-section">
-      <h1 class="section-title">Reach Me</h1>
+      <h1 class="section-title">Contact</h1>
       <h2>Phone</h2>
       <h2>Email</h2>
       <h2>Socials</h2>
