write about sections

--- a/index.html
+++ b/index.html
@@ -116,16 +116,16 @@
         </div>
       </div>
       <div class="about-text1">
-        I'm a full stack web developer and recent graduate from the <span>Universty of Utah</span>'s coding bootcamp. My place in the world seems to be at the junction creativity and logic.
+        I'm a full stack web developer and recent graduate from the Universty of Utah's coding bootcamp. My place in the world seems to be at the junction creativity and logic.
       </div>
       <div class="about-text2">
-        Whether it's breathing new life into legacy content, or starting with a blank slate and building applications from scratch, I tackle every project with eagerness and enthusiasm.
+        Whether it's breathing new life into legacy content or building applications from scratch, I tackle every project with eagerness and enthusiasm.
       </div>
       <div class="about-text3">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam, aperiam, dolor magnam perferendis reprehenderit, cupiditate excepturi soluta tempore culpa praesentium molestias? Consectetur saepe ullam expedita itaque sapiente, magni dolorem rem?
+        I am proficient with a range of front and back-end languages, tools and frameworks like HTML5, CSS3, JavaScript, jQuery, Node.js, Bootstrap, SQL, Express.js, MongoDB, and React.   
       </div>
       <div class="about-text4">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam, aperiam, dolor magnam perferendis reprehenderit, cupiditate excepturi soluta tempore culpa praesentium molestias? Consectetur saepe ullam expedita itaque sapiente, magni dolorem rem?
+        Outside the world of programming you might find me studying my favorite chess openings, entertaining my two crazy doggos, traveling with my wife, or getting giddy over a large plate of sushi.
       </div>
     </section>
 
