messing with footer planet

--- a/index.html
+++ b/index.html
@@ -129,14 +129,18 @@
       </div>
     </section>
 
-    <section class="contact-section">
-      <h1 class="section-title">Contact</h1>
-      <h2>Phone</h2>
-      <h2>Email</h2>
-      <h2>Socials</h2>
-      <h2>Resumé</h2>
-    </section>
-  </mai>
+    <footer>
+      <div class="contact-section">
+        <div class="links">
+          <h1 class="section-title">Contact</h1>
+          <h2>Phone</h2>
+          <h2>Email</h2>
+          <h2>Socials</h2>
+          <h2>Resumé</h2>
+        </div>
+      </div>
+    </footer>
+  </main>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="./assets/js/script.js"></script>
