animate menu btn

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="logo">
       <h1>TH</h1>
     </div>
-    <div class="hamburger">
-      <div class="patty"></div>
-      <div class="patty"></div>
-      <div class="patty"></div>
+    <div class="menu-btn">
+      <div id="burger-top" class="menu-btn_burger"></div>
+      <div id="burger-mid"class="menu-btn_burger"></div>
+      <div id="burger-bot"class="menu-btn_burger"></div>
     </div>
   </nav>
 
