--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
     </div>
   </nav>
 
+  <div class="menu-page">
+    <ul>
+      <li>
+        <a href="#">Projects</a>
+      </li>
+      <li>
+        <a href="#">About</a>
+      </li>
+      <li>
+        <a href="#">Contact</a>
+      </li>
+    </ul>
+  </div>
+
   <main>
     <section class="jumbotron">
       <h1 class="intro-text">Hey! I'm Taylor. I build interactive websites for humans.</h1>
@@ -143,6 +157,7 @@
   </main>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
   <script src="./assets/js/script.js"></script>
 </body>
 </html>
