tune menu animation

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     </div>
   </nav>
 
+  <div id="menu-slider1" class="menu-page-slider"></div>
+  <div id="menu-slider2" class="menu-page-slider"></div>
+  <div id="menu-slider3" class="menu-page-slider"></div>
+  <div id="menu-slider4" class="menu-page-slider"></div>
   <div class="menu-page">
     <ul>
       <li>
