clean up menu animation logic, add nav linkage

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
   <div id="menu-slider4" class="menu-page-slider"></div>
   <div class="menu-page">
     <ul>
-      <li>
-        <a href="#">Projects</a>
+      <li class="nav-links">
+        <a href="#projects">Projects</a>
       </li>
-      <li>
-        <a href="#">About</a>
+      <li class="nav-links">
+        <a href="#about">About</a>
       </li>
-      <li>
-        <a href="#">Contact</a>
+      <li class="nav-links">
+        <a href="#contact">Contact</a>
       </li>
     </ul>
   </div>
@@ -43,7 +43,7 @@
       <img id="icosa" src="/assets/images/icosahedron-muted-350.png" alt="icosahedron-muted-350">
     </section>
   
-    <section class="project-section">
+    <section id="projects" class="project-section">
 
       <h1 class="section-title">Projects</h1>
 
@@ -119,7 +119,7 @@
 
     </section>
 
-    <section class="about-section">
+    <section id="about" class="about-section">
       <div class="tay-container">
         <div class="blanket">
           <img id="tay-cutout" src="./assets/images/taycutout.png" alt="tay">
@@ -148,7 +148,7 @@
     </section>
 
     <footer>
-      <div class="contact-section">
+      <div id="contact" class="contact-section">
         <div class="links">
           <h1 class="section-title">Contact</h1>
           <h2>Phone</h2>
