--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <main>
     <section class="jumbotron">
       <h1 class="intro-text">Hey! I'm Taylor. I build interactive websites for humans.</h1>
-      <img id="icosa" src="/assets/images/icosahedron-muted-350.png" alt="icosahedron-muted-350">
+      <!-- <img id="icosa" src="/assets/images/icosahedron-muted-350.png" alt="icosahedron-muted-350"> -->
     </section>
 
     <section id="projects" class="project-section">
