touch up menu links

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
   <div class="menu-page">
     <ul>
       <li class="nav-links">
+        <a href="#">Home</a>
+      </li>
+      <li class="nav-links">
         <a href="#projects">Projects</a>
       </li>
       <li class="nav-links">
