--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <main>
     <section class="jumbotron">
-      <h1 class="intro-text">CSSing! I'm Taylor. I build interactive websites for humans.</h1>
+      <h1 class="intro-text">Hovering! I'm Taylor. I build interactive websites for humans.</h1>
       <!-- <img id="icosa" src="/assets/images/icosahedron-muted-350.png" alt="icosahedron-muted-350"> -->
     </section>
 
