--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <main>
     <section class="jumbotron">
-      <h1 class="intro-text">Webkit?! I'm Taylor. I build interactive websites for humans.</h1>
+      <h1 class="intro-text">1999?! I'm Taylor. I build interactive websites for humans.</h1>
       <svg id="icosaTEST" class="icosahedron-svg" viewBox="0 0 407 464" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path
