display block to portal and revealers

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <main>
     <section class="jumbotron">
-      <h1 class="intro-text">Isolate webkit! I'm Taylor. I build interactive websites for humans.</h1>
+      <h1 class="intro-text">Hey! I'm Taylor. I build interactive websites for humans.</h1>
       <svg id="icosaTEST" class="icosahedron-svg" viewBox="0 0 407 464" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path
@@ -216,7 +216,7 @@
           </a>
           <svg class="triangle-portal" viewBox="0 0 602 482" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M57.6469 441.5L301 20L544.353 441.5H57.6469Z" stroke="#2FC6A8" />
-            <circle cx="301.5" cy="301.5" r="7.5" fill="#FF0000"/>
+            <!-- <circle cx="301.5" cy="301.5" r="7.5" fill="#FF0000"/> -->
           </svg>
         </div>
       </div>
