--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             </svg>
           </a>
           <svg class="triangle-portal" viewBox="0 0 602 482" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M57.6469 441.5L301 20L544.353 441.5H57.6469Z" stroke="#2FC6A8" />
+            <path d="M57.6469 441.5L301 20L544.353 441.5H57.6469Z" />
             <!-- <circle cx="301.5" cy="301.5" r="7.5" fill="#FF0000"/> -->
           </svg>
         </div>
